<resources>

    <string name="app_name">BuyThingsByLBS</string>
    <string name="action_plus">添加</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_clearcache">清除缓存</string>
    <string name="action_ablout">关于</string>
    <string name="action_main">主页</string>
    <string name="action_my_info">我的信息</string>
    <string name="login_register_title">账号管理</string>
    <string name="action_publish">发布</string>
    <string name="action_login">登录</string>
    <string name="action_loginOut">退出登录</string>
    <string name="action_delete">删除</string>
    <string name="action_update">编辑</string>
    <string name="action_mythings">我的东西</string>
    <string name="action_buy">购买</string>
    <string name="action_hadbuy">我购买的东西</string>
    <string name="action_cancel_buy">取消购买</string>
    <string name="my_location">我的位置</string>
    <string name="action_location">定位</string>
    <string name="action_show_imagenum">0/0</string>
</resources>
                                         